--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio Agustin</title>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/sobremi.css">
-    <link rel="stylesheet" href="/css/presentacion.css">
-    <link rel="stylesheet" href="/css/skillsHobbies.css">
-    <link rel="stylesheet" href="/css/formacion.css">
-    <link rel="stylesheet" href="/css/proyectos.css">
-    <link rel="stylesheet" href="/css/contacto.css">
-    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/sobremi.css">
+    <link rel="stylesheet" href="./css/presentacion.css">
+    <link rel="stylesheet" href="./css/skillsHobbies.css">
+    <link rel="stylesheet" href="./css/formacion.css">
+    <link rel="stylesheet" href="./css/proyectos.css">
+    <link rel="stylesheet" href="./css/contacto.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
@@ -44,7 +44,7 @@
                 <li><a class="redesPresentacion" href="https://www.canva.com/design/DAFaTAPigcs/MT44h7nSrH6vcKJoTxYlwA/view?utm_content=DAFaTAPigcs&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">Curriculum&#8599</a></li>
             </nav>
         </div>
-        <img class="imagenPresentacion" src="/imagenes/profile.jpg">
+        <img class="imagenPresentacion" src="./imagenes/profile.jpg">
     </div>
     <div class="sobreMi" id="sobreMi">
         <nav class="navSobreMi">
@@ -128,19 +128,19 @@
           <nav class="formacionNav">
             <ul class="formacionUl">
               <li class="formacionLi">
-                <img src="/imagenes/mP5foN6.png" title="source: imgur.com" alt="Logo universidad" class="formacionLogo"></a> 
+                <img src="./imagenes/mP5foN6.png" title="source: imgur.com" alt="Logo universidad" class="formacionLogo"></a> 
                 <h3>UTN FRBA</h3>
                 <p>Fecha de inicio - 2023</p>
                 <p>Título en proceso: Ingenieria en sistemas</p>
               </li>
               <li class="formacionLi">
-                <img src="/imagenes/XrDy6n2.png" alt="Logo instituto" class="formacionLogo">
+                <img src="./imagenes/XrDy6n2.png" alt="Logo instituto" class="formacionLogo">
                 <h3>Ad expert</h3>
                 <p>Fecha de inicio - 2023</p>
                 <p>Título en proecso: Marketing digital</p>
               </li>
               <li class="formacionLi">
-                <img src="/imagenes/P7uNRYN.png" alt="Logo curso" class="formacionLogo">
+                <img src="./imagenes/P7uNRYN.png" alt="Logo curso" class="formacionLogo">
                 <h3>Programa ONE de Alura latam</h3>
                 <p>Fecha de inicio - 09/2022 </p>
                 <p>Titulo programador Frontend: HTML, CSS y Javascript</p>
@@ -153,7 +153,7 @@
     <div id="proyectos">
         <h4>Experiencia profesional</h4>
         <nav class="navExperiencia">
-            <img class="imgExperiencia" src="/imagenes/img.png">
+            <img class="imgExperiencia" src="./imagenes/img.png">
             <ul class="ulproyectos">
                 <h6>Encriptador de texto</h6>
                 <p>Challenge Alura Codificar</p>
@@ -165,7 +165,7 @@
     </div>
     <div id="contacto">
         <nav class="navContacto">
-            <img src="/imagenes/contacto.jpg">
+            <img src="./imagenes/contacto.jpg">
             <div class="contact_form">
                 <div class="formulario">      
                   <h1>Formulario de contacto</h1>
