--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <h6>Encriptador de texto</h6>
                 <p>Challenge Alura Codificar</p>
                 <div class="liproyectos">
-                    <li><a class="repositorio" href="*">Repositorio</a></li>
+                    <li><a class="repositorio" href="https://github.com/Aguspalo03/portafolio.github.io">Repositorio</a></li>
                 </div>
             </ul>    
         </nav>
